--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "cross-env NODE_ENV=development webpack --watch",
     "build": "cross-env NODE_ENV=production webpack --hide-modules",
-    "build-zip": "node scripts/build-zip.js"
+    "build-zip": "npm run build && node scripts/build-zip.js"
   },
   "author": "ctechhindi",
   "license": "MIT",
