--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,15 +15,26 @@
         "persistent": false
     },
     "browser_action": {
+        "default_popup": "popup/popup.html",
+        "default_title": "__MSG_appName__",
         "default_icon": {
             "16": "icons/16x16.png",
             "24": "icons/24x24.png",
             "32": "icons/32x32.png"
-        },
-        "default_title": "__MSG_appName__"
+        }
     },
     "options_ui": {
         "page": "options/options.html",
         "open_in_tab": true
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "scripts/script1.js"
+            ]
+        }
+    ]
 }
